k8s/k8s-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-storage
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cachemanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cachemanager
  template:
    metadata:
      labels:
        app: cachemanager
    spec:
      containers:
      - name: cachemanager
        image: expovin/cachemanager:1.0
        ports:
        - containerPort: 3006
        volumeMounts:
        - mountPath: /app/cache
          name: cache-storage
      volumes:
      - name: cache-storage
        persistentVolumeClaim:
          claimName: cachemanager-pvc
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dbmanager
  template:
    metadata:
      labels:
        app: dbmanager
    spec:
      containers:
      - name: dbmanager
        image: expovin/dbmanager:1.0
        ports:
        - containerPort: 3002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertingservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertingservice
  template:
    metadata:
      labels:
        app: alertingservice
    spec:
      containers:
      - name: alertingservice
        image: expovin/alertingservice:1.0
        ports:
        - containerPort: 3008
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capitalmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: capitalmanager
  template:
    metadata:
      labels:
        app: capitalmanager
    spec:
      containers:
      - name: capitalmanager
        image: expovin/capitalmanager:1.0
        ports:
        - containerPort: 3009
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strategy-utils
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strategy-utils
  template:
    metadata:
      labels:
        app: strategy-utils
    spec:
      containers:
      - name: strategy-utils
        image: expovin/strategy-utils:1.0
        ports:
        - containerPort: 3007
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: livemarketlistener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: livemarketlistener
  template:
    metadata:
      labels:
        app: livemarketlistener
    spec:
      containers:
      - name: livemarketlistener
        image: expovin/livemarketlistener:1.0
        ports:
        - containerPort: 3012
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sma
  template:
    metadata:
      labels:
        app: sma
    spec:
      containers:
      - name: sma
        image: expovin/sma:1.0
        ports:
        - containerPort: 3010
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderlistner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderlistner
  template:
    metadata:
      labels:
        app: orderlistner
    spec:
      containers:
      - name: orderlistner
        image: expovin/orderlistner:1.0
        ports:
        - containerPort: 3011
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordersimulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ordersimulator
  template:
    metadata:
      labels:
        app: ordersimulator
    spec:
      containers:
      - name: ordersimulator
        image: expovin/ordersimulator:1.0
        ports:
        - containerPort: 3004
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketsimulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marketsimulator
  template:
    metadata:
      labels:
        app: marketsimulator
    spec:
      containers:
      - name: marketsimulator
        image: expovin/marketsimulator:1.0
        ports:
        - containerPort: 3003
